plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.1'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.project'
version = '0.0.1-SNAPSHOT'

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}
dependencies {
    implementation(project(":global"))

    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'

    implementation 'org.springframework.boot:spring-boot-starter'
    //springweb
    implementation 'org.springframework.boot:spring-boot-starter-web'

    //tymeleaf
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
//    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6' // 스프링시큐리티 + 타임리프 통합 활성화
    //lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    //test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    //jpa
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // QueryDSL
    implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0' // Jakarta Persistence
    implementation "com.querydsl:querydsl-jpa:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
    annotationProcessor 'com.querydsl:querydsl-apt:5.1.0:jakarta' // APT 플러그인 / 해당 버전이 spring boot 3.4.1 과 이슈 없음 확인
    annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
    annotationProcessor 'jakarta.persistence:jakarta.persistence-api'

    //springSecurity + jwt
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.security:spring-security-oauth2-jose'

    //mysql
    implementation 'mysql:mysql-connector-java:8.0.33'
    runtimeOnly 'com.mysql:mysql-connector-j'

    // Redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.data:spring-data-redis'

    // Swagger 3.0 (SpringBoot 3.x 버전 지원)
    implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.4"
}

// QueryDSL 사용을 위해 빌드 시 폴더와 Q클래스 생성
def querydslSrcDir = 'src/main/generated'

sourceSets {
    main {
        java {
            srcDirs = ['src/main/java', 'build/generated/sources/annotationProcessor/java/main']
        }
    }
}
//// 아직까지는 reservation service는 bootjar생성 X
//tasks.named('bootJar') {
//    enabled = false
//}
//
//tasks.named('jar') {
//    enabled = true
//}